Fix up alignment

--- a/public/js/views/menu/room/minibar/minibar-view.less
+++ b/public/js/views/menu/room/minibar/minibar-view.less
@@ -313,9 +313,16 @@
 // DND mirror styles when dragging a left-menu "room-list item"
 // "room-list item" applies to any item that isn't necessarily a room
 .minibar-collection-list {
-  & .room-item {
+  & .room-item,
+  & .room-item--group {
     .room-menu-options__item();
     opacity: 1;
+  }
+
+  & .room-item--favourite {
+    &:before {
+      display: none;
+    }
   }
 
   & .room-item__container {
@@ -325,18 +332,18 @@
     width: 100%;
     height: 100%;
     padding: 0;
+
   }
 
-  & .room-item__options-menu {
-    display: none;
-  }
-
-  & .room-item__options-icon {
+  & .room-item__avatar {
     margin: 0;
   }
 
   & .room-item__title,
-  & .room-item__options {
+  & .room-item__options,
+  // Specificity issue
+  && .room-item__favourite-action,
+  & .room-item__options-menu {
     display: none;
   }
 }
